--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <div class="container">
         <header>
             <h1>🏆 SPORTS TV SCHEDULE</h1>
-            <p>Tampa Bay Area Market 33544</p>
+            <p>Tampa Bay Area Market</p>
             <div class="date-range">December 27, 2025 – January 1, 2026</div>
         </header>
 
