--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
     <div class="container">
         <header>
             <h1>🏆 SPORTS TV SCHEDULE</h1>
-            <p>Tampa Bay Area Market</p>
+            <p>All Times are in Eastern Time</p>
             <div class="date-range">December 27, 2025 – January 31, 2026</div>
         </header>
 
