--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 
         // Sport emoji mapping
         const sportEmojis = {
-            'College Football': '📢',
+            'NCAAF': '📢',
             'NFL': '🏈',
             'NBA': '🏀',
             'NHL': '🏒',
