--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
     <div class="container">
         <header>
-            <h1>🏆 SPORTS TV SCHEDULE</h1>
+            <h1>🏆 Sports On TV 🏆</h1>
             <p class="date-range">December 27, 2025 – January 31, 2026</p>
             <div class="timezone-selector">
                 <label for="timezoneSelect">Timezone:</label>
