--- a/index.html
+++ b/index.html
@@ -324,6 +324,14 @@
                 -0px -0px 0px #ffffff;
         }
 
+        body.dark-mode .filter-btn.active {
+            background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%);
+            color: white;
+            box-shadow: 
+                0 5px 15px rgba(139, 92, 246, 0.6),
+                inset 0 1px 3px rgba(0, 0, 0, 0.3);
+        }
+
         .clear-filters {
             width: 100%;
             padding: 12px;
